se creo comunicacion de activity BIENVENIDO a SOBREDESARROLLADOR

--- a/SubnettingApp/app/src/main/res/layout/content_bienvenido.xml
+++ b/SubnettingApp/app/src/main/res/layout/content_bienvenido.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.desmov.subneteo.subnettingapp.Bienvenido"
-    tools:showIn="@layout/activity_bienvenido">
+    tools:showIn="@layout/activity_bienvenido"
+    android:background="@drawable/logo">
 
     <Button
         android:layout_width="wrap_content"
