--- a/SubnettingApp/app/src/main/res/layout/content_subneteo_ip.xml
+++ b/SubnettingApp/app/src/main/res/layout/content_subneteo_ip.xml
@@ -20,4 +20,86 @@
         android:textSize="25dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_below="@+id/txtInstruccion"
+        android:id="@+id/gridLayout">
+
+        <EditText
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/etHoc1"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:textSize="25dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="."
+            android:id="@+id/txtP1"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:textSize="25dp" />
+
+        <EditText
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/etHoc2"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:textSize="25dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="."
+            android:id="@+id/txtp2"
+            android:layout_row="0"
+            android:layout_column="3"
+            android:textSize="25dp" />
+
+        <EditText
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/etHoc3"
+            android:layout_row="0"
+            android:layout_column="4"
+            android:textSize="25dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="."
+            android:id="@+id/txtP3"
+            android:layout_row="0"
+            android:layout_column="5"
+            android:textSize="25dp" />
+
+        <EditText
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editText"
+            android:layout_row="0"
+            android:layout_column="6"
+            android:textSize="25dp" />
+    </GridLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Siguiente"
+        android:id="@+id/btnSig"
+        android:layout_below="@+id/gridLayout"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
