--- a/SubnettingApp/app/src/main/res/layout/content_subneteo_prefijo.xml
+++ b/SubnettingApp/app/src/main/res/layout/content_subneteo_prefijo.xml
@@ -21,4 +21,48 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="25dp" />
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:id="@+id/gridLayout2">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="/"
+            android:id="@+id/txtSimbolo"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:textSize="25dp" />
+
+        <EditText
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/etPre"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:textSize="25dp" />
+    </GridLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Agregar prefijo"
+        android:id="@+id/btnAgregarPrefijo"
+        android:layout_below="@+id/gridLayout2"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calcular SUbneteo"
+        android:id="@+id/btnCalcularSUbneteo"
+        android:layout_below="@+id/btnAgregarPrefijo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp" />
 </RelativeLayout>
