activity PREFIJO listo y validado

--- a/SubnettingApp/app/src/main/res/layout/content_subneteo_prefijo.xml
+++ b/SubnettingApp/app/src/main/res/layout/content_subneteo_prefijo.xml
@@ -44,6 +44,7 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/etPre"
+            android:maxLength="2"
             android:layout_row="0"
             android:layout_column="1"
             android:textSize="25dp" />
