--- a/SubnettingApp/app/src/main/res/layout/content_subneteo_ip.xml
+++ b/SubnettingApp/app/src/main/res/layout/content_subneteo_ip.xml
@@ -34,6 +34,7 @@
             android:ems="10"
             android:id="@+id/etHoc1"
             android:layout_row="0"
+            android:maxLength="3"
             android:layout_column="0"
             android:textSize="25dp" />
 
@@ -52,6 +53,7 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/etHoc2"
+            android:maxLength="3"
             android:layout_row="0"
             android:layout_column="2"
             android:textSize="25dp" />
@@ -71,6 +73,7 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/etHoc3"
+            android:maxLength="3"
             android:layout_row="0"
             android:layout_column="4"
             android:textSize="25dp" />
@@ -89,7 +92,8 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/etHoc4"
+            android:maxLength="3"
             android:layout_row="0"
             android:layout_column="6"
             android:textSize="25dp" />
