--- a/SubnettingApp/app/src/main/res/menu/menu_bienvenido.xml
+++ b/SubnettingApp/app/src/main/res/menu/menu_bienvenido.xml
@@ -2,6 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.desmov.subneteo.subnettingapp.Bienvenido">
+
+
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
@@ -27,9 +30,9 @@
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/que"
+        android:id="@+id/info"
         android:orderInCategory="100"
-        android:title="¿Qué es subneteo?"
+        android:title="Información"
         app:showAsAction="never" />
 
     <item
