--- a/SubnettingApp/app/src/main/res/layout/content_subneteo.xml
+++ b/SubnettingApp/app/src/main/res/layout/content_subneteo.xml
@@ -27,4 +27,13 @@
                 android:layout_height="match_parent"></TableLayout>
         </HorizontalScrollView>
     </ScrollView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/btnPrb"
+        android:layout_below="@+id/scrollView4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp" />
 </RelativeLayout>
