--- a/SubnettingApp/app/src/main/res/layout/content_subneteo.xml
+++ b/SubnettingApp/app/src/main/res/layout/content_subneteo.xml
@@ -13,18 +13,19 @@
     tools:showIn="@layout/activity_subneteo">
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView4" >
 
         <HorizontalScrollView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/horizontalScrollView" >
 
             <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></TableLayout>
+                android:layout_height="wrap_content"
+                android:id="@+id/tabla"></TableLayout>
         </HorizontalScrollView>
     </ScrollView>
 
@@ -32,8 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Button"
-        android:id="@+id/btnPrb"
+        android:id="@+id/btna"
         android:layout_below="@+id/scrollView4"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp" />
+
 </RelativeLayout>
