--- a/SubnettingApp/app/src/main/res/layout/content_subneteo.xml
+++ b/SubnettingApp/app/src/main/res/layout/content_subneteo.xml
@@ -15,27 +15,37 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollView4" >
+        android:id="@+id/scrollView" >
 
         <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/horizontalScrollView" >
 
-            <TableLayout
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tabla"></TableLayout>
+                android:layout_height="match_parent">
+
+                <TableLayout
+                    android:id="@+id/tabla"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="32dp"
+                    android:stretchColumns="+">
+
+                </TableLayout>
+            </LinearLayout>
         </HorizontalScrollView>
     </ScrollView>
 
-    <Button
+    <!--Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Button"
         android:id="@+id/btna"
-        android:layout_below="@+id/scrollView4"
+        android:layout_below="@+id/btna"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp" />
+        android:layout_marginTop="45dp" /-->
 
 </RelativeLayout>
