--- a/SubnettingApp/app/src/main/res/menu/menu_ip.xml
+++ b/SubnettingApp/app/src/main/res/menu/menu_ip.xml
@@ -1,21 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.desmov.subneteo.subnettingapp.Bienvenido">
-
-
-
-    <!--item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" /-->
+    tools:context="com.desmov.subneteo.subnettingapp.subneteoIp">
 
     <item
         android:id="@+id/inicio"
         android:orderInCategory="100"
         android:title="Inicio"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/acercaDe"
