--- a/SubnettingApp/app/src/main/res/layout/content_sobre_desarrollador.xml
+++ b/SubnettingApp/app/src/main/res/layout/content_sobre_desarrollador.xml
@@ -13,7 +13,7 @@
     tools:context="com.desmov.subneteo.subnettingapp.sobreDesarrollador"
     tools:showIn="@layout/activity_sobre_desarrollador"
     android:orientation="vertical"
-    android:background="#ea7c7c">
+    android:background="#9FBBE8">
 
 
     <TextView
@@ -25,5 +25,5 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:editable="false"
-        android:textColor="#ffffff" />
+        android:textColor="#2D757F" />
 </LinearLayout>
